# learn-mlflow

./: .gitignore  Makefile  README.md  pyproject.toml
learn_mlflow/: mlflow_client_api.ipynb  tracking_quickstart.ipynb
mlartifacts/754204556285685464/3ec1b3555b00426598b3e50a81eadda6/artifacts/iris_model/: MLmodel  model.pkl  python_env.yaml
mlruns/0/: meta.yaml
mlruns/130386459462032636/: meta.yaml
mlruns/130386459462032636/7dd9e95d5ab64798931ad0781b810b3f/: meta.yaml
mlruns/130386459462032636/7dd9e95d5ab64798931ad0781b810b3f/metrics/: bar  foo
mlruns/130386459462032636/7dd9e95d5ab64798931ad0781b810b3f/tags/: mlflow.runName  mlflow.source.name
mlruns/754204556285685464/: meta.yaml
mlruns/754204556285685464/3ec1b3555b00426598b3e50a81eadda6/: meta.yaml
mlruns/754204556285685464/3ec1b3555b00426598b3e50a81eadda6/metrics/: accuracy
mlruns/754204556285685464/3ec1b3555b00426598b3e50a81eadda6/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
