[tool.poetry]
name = "learn-mlflow"
version = "0.1.0"
description = ""
authors = ["Romaric DEMBELE <romadembele@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.18.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
